Ажурирани задаци са шестих вежби.

--- a/вежбе/вежбе06.md
+++ b/вежбе/вежбе06.md
@@ -1,273 +1,454 @@
 # Основи програмирања: вежбе - VI недеља
 
 ## Задатак 1
- Написати функцију која за целобројну вредност секунде претвара у формат
--сати:минути:секунди за негативне, односно сати:минути:секунди за ненегативне улазе
+Написати функцију која враћа збир првих н бројева.
+Тражи се рекурзивно решење.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def pretvaranje_vremena(sekunde):
+def suma_do_n_rekurzivno(n):
     """
-    Написати функцију која за целобројну вредност секунде претвара у формат
-    -сати:минути:секунди за негативне, односно сати:минути:секунди за ненегативне улазе
-    Пример:
-    0 -> '0:0:0'
-    -34567 -> '-9:36:7'
-    100001 -> '27:46:41'
+    Написати функцију која враћа збир првих н бројева.
+    Тражи се рекурзивно решење.
     """
-    sati = abs(sekunde) // 3600
-    minuti = abs(sekunde) % 3600 // 60
-    sekundi = abs(sekunde) % 60
-    if sekunde < 0:
-        return '-' + str(sati) + ':' + str(minuti) + ':' + str(sekundi)
-    else:
-        return str(sati) + ':' + str(minuti) + ':' + str(sekundi)
-    
+    if n == 1:
+        return 1
+
+    return n + suma_do_n_rekurzivno(n-1)
 ```
 </details>
 
 ## Задатак 2
-Написати функцију која враћа члан низа који фали.
-Низ је дужине н, и садржи бројеве у опсегу [0,н].
+Написати функциjу коjа не користи петље, а враћа збир цифара унетог
+произвољног целог броjа.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def broj_koji_fali(niz):
-    """
-    Написати функцију која враћа члан низа који фали.
-    Низ је дужине н, и садржи бројеве у опсегу [0,н].
-    Пример:
-    [3,0,1] -> 2
-    [9,6,4,2,3,5,7,0,1] -> 8
-    """
-    n = len(niz)
-    return n*(n+1)//2 - sum(niz)
-    
+def zbir_cifara(n):
+    if n==0:
+        return 0
+    return abs(n)%10 + zbir_cifara(abs(n)//10)
 ```
 </details>
 
 ## Задатак 3
-Написати функцију која проверава да ли је редослед заграда ваљан.
+Написати функциjу коjа врши израчунавање производа два броjа понављањем сабирања.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def zagrade(niska):
-    """
-    Написати функцију која проверава да ли је редослед заграда ваљан.
-    Пример:
-    "(())" -> True
-    ")(" -> False
-    "()) -> False
-    """
-    brojac = 0
-    for karakter in niska:
-        if karakter == "(":
-            brojac += 1
-        if karakter == ")":
-            brojac -= 1
-        if brojac < 0:
-            return False
+def mnozenje_iterativno(a, b):
+    rezultat = 0
+    while b > 0:
+        rezultat += a
+        b -= 1
+    return rezultat
+```
+</details>
 
-    return brojac == 0
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def mnozenje_rekurzivno(a, b):
+    if b == 0:
+        return 0
+    return a + mnozenje_rekurzivno(a, b-1)
 ```
 </details>
 
 ## Задатак 4
-Написати функцију која враћа максималан члан у низу који се појављује непаран број пута.
+Написати функцију која враћа факторијел броја н.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def najveci_neparan_puta(niz):
-    """
-    Написати функцију која враћа максималан члан у низу који се појављује непаран број пута.
-    Пример:
-    [5,10,23,10,23] -> 5
-    """
-    skup_neparnih=set()
-    for clan in niz:
-        if niz.count(clan)%2 ==1:
-            skup_neparnih.add(clan)
-    if not skup_neparnih: return None
-    return max(skup_neparnih)
-    
+def faktorijel_iterativno(n):
+    rezultat = 1
+    while n > 1:
+        rezultat *= n
+        n -= 1
+    return rezultat
+```
+</details> 
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def faktorijel_rekurzivno(n):
+    if n <= 1:
+        return 1
+    return n*faktorijel_rekurzivno(n-1)
 ```
 </details>
 
 ## Задатак 5
-Написати функцију која враћа име контакта који у свом броју има део броја који укуцамо.
-Уколико има више таквих контакта, вратити оног са најмањом алфабетском вредношћу.
-А уколико нема ни једног, врати "NO CONTACT".
+Написати функцију која враћа н-ти члан Фибоначијевог низа.
+Сваки члан Фибоначијевог низа се добија као збир претходна два његова члана.
+Почетни чланови низа су 0 и 1.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def kontakti(imena, brojevi, deo_broja):
-    """
-    Написати функцију која враћа име контакта који у свом броју има део броја који укуцамо.
-    Уколико има више таквих контакта, вратити оног са најмањом алфабетском вредношћу.
-    А уколико нема ни једног, врати "NO CONTACT".
-    Пример:
-    imena = ["Pera","Mika"]
-    brojevi = ["99999999", "777888999"]
-    deo_broja = "88999" -> "Mika"
-    """
-    res = []
-    for i in range(len(brojevi)):
-        if deo_broja in brojevi[i]:
-            res.append(imena[i])
+def fibonaci_I(n):
+    """Израчунава n-ти Фибоначијев број, за n >= 2."""
+    prethodni,trenutni = 0, 1   # први и други Фибоначијев број
+    k = 2                        # тренутни Фибоначијев број
 
-    if len(res) == 0:
-        return 'NO CONTACT'
-    res = sorted(res)
-    return res[0]
-    
+    while k < n:
+        prethodni, trenutni = trenutni, prethodni + trenutni
+        k = k + 1
+
+    return trenutni
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def fibonaci(n):
+    """
+    Написати функцију која враћа н-ти члан Фибоначијевог низа.
+    Сваки члан Фибоначијевог низа се добија као збир претходна два његова члана.
+    Почетни чланови низа су 0 и 1.
+    """
+    if n == 1:
+       return 0
+    if n == 2:
+        return 1
+    return fibonaci(n-1) + fibonaci(n-2)
 ```
 </details>
 
 ## Задатак 6
-Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
+Написати функциjу коjа цео броj преводи из декадног у бинарни
+систем. Траже се и рекурзивно и итеративно решење.
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def nedeljivi_brojevi(leva_granica,desna_granica):
-    """
-    Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
-    Пример:
-    11,22 -> [1,2,3,4,5,6,7,8,9,11,12,15,22]
-    47,85 -> [48,55,66,77]]
-    """
-    def deljiv(n):
-        for cifra in str(n):
-            if cifra == '0' or n % int(cifra) != 0:
-                return False
-        return True
+def d2b_iter(n):
+    k=[]
+    while (n>0):
+        a=n%2
+        k.append(a)
+        n=n//2
+    string=""
+    for j in k[::-1]:
+        string=string+str(j)
+    print(string)
 
-    res = []
-    for n in range(leva_granica, desna_granica + 1):
-        if deljiv(n):
-            res.append(n)
-    return res
-    
+#d2b_iter(n)
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def d2b(n):
+    if n <=1:
+        return n
+    return int(str(d2b(n//2))+str(n%2))
+
+n=int(input())
+print(d2b(n))
 ```
 </details>
 
 ## Задатак 7
-Написати функцију низ са парним бројем чланова групише у парове, тако да је збир минимуа тих парова максималан,
-и вратити тај максимум.
+Написати функциjу коjа за унети цео броj рачуна следећи поткорени
+израз (у примеру jе ’унети’ броj 5): \
+$\sqrt{5+\sqrt{4+\sqrt{3+\sqrt{2+\sqrt{1}}}}}=2,735877$
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def maksimum_minimuma(niz):
-    """
-    Написати функцију низ са парним бројем чланова групише у парове, тако да је збир минимуа тих парова максималан,
-    и вратити тај максимум.
-    Пример:
-    Улаз: niz = [1,4,3,2]
-    Објашњење: Сви могући парови (занемаримо редослед бројева):
-    1. (1, 4), (2, 3) -> min(1, 4) + min(2, 3) = 1 + 2 = 3
-    2. (1, 3), (2, 4) -> min(1, 3) + min(2, 4) = 1 + 2 = 3
-    3. (1, 2), (3, 4) -> min(1, 2) + min(3, 4) = 1 + 3 = 4
-    Излаз: 4
-    """
-    # Сортирамо низ у растућем поретку
-    niz.sort()
-    # Иницијализујемо максимум на 0
-    max_sum = 0
-    for i in range(0, len(niz), 2):
-        # Додамо чланове на парним индексима у суму
-        max_sum += niz[i]
-        
-    return max_sum
-    
+from math import sqrt
+
+def korenovi_iterativno(n):
+    k=0
+    sum=0
+    while k<n:
+        sum=sqrt(sum + k+1)
+        k+=1
+    return sum
+
+n=int(input())
+print("{:10.6f}".format(korenovi_iterativno(n)))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+from math import sqrt
+
+def korenovi(n):
+    if n==1:
+        return 1
+    return sqrt(n+korenovi(n-1))
+
+n=int(input())
+print("{:10.6f}".format(korenovi(n)))
 ```
 </details>
 
 ## Задатак 8
-Написати функцију која прима низ цена бомбона, одредити колико новца би требало да потрошимо да купимо све из низа,
-ако на сваке две купљене бомбоне трећу добијамо гратис.
-Купац може изабрати коју год хоће гратис само ако цена треће није мања од миминалне цене претходне две купљене бомбоне.
+Написати функциjу коjа израчунава целоброjну вредност логаритма
+унетог позитивног природног броjа за задату основу коjа jе већа или
+jеднака од два, таквог да, када се задата основа степенуjе целоброjном
+вредношћу коjу процедура враћа, добиjени резултат jе мањи или
+jеднак унетом броjу.
 
 <details markdown='block'>
-<summary>Решење </summary>
+<summary>Решење - итеративно</summary>
 
 ```python
-def bombone(niz_cena):
-    """
-    Написати функцију која прима низ цена бомбона, одредити колико новца би требало да потрошимо да купимо све из низа,
-    ако на сваке две купљене бомбоне трећу добијамо гратис.
-    Купац може изабрати коју год хоће гратис само ако цена треће није мања од миминалне цене претходне две купљене бомбоне.
-    Пример:
-    [1,2,3] -> 5
-    Купимо бомбоне од 3 и 2 динара, а бомбону од 1 динар добијамо гратис.
-    [6,5,7,9,2,2] -> 23
-    Купимо бомбоне од 9 и 7, од 6 динара добијамо гратис, купимо бомбоне од 5 и 2, и другу од 2 добијамо гратис.
-    """
-    niz_cena.sort(reverse=True)
-    cena = 0
-    for i in range(len(niz_cena)):
-        if (i+1) % 3 != 0:
-            cena += niz_cena[i]
+def moj_logaritam_iterativno(broj, osnova):
+    vrednost = -1
+    while broj > 0:
+        broj//=osnova #broj = broj // osnova
+        vrednost += 1
+        if broj == 0:
+            return vrednost
+```
+</details>
 
-    return cena
-    
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def moj_logaritam_rekurzivno(broj, osnova):
+    if broj < osnova:
+        return 0
+    return 1 + moj_logaritam_rekurzivno(broj/osnova, osnova)
 ```
 </details>
 
 ## Задатак 9
-Написати функцију која за сортиран низ јединствених елемената налази индекс на који би требало ставити број уколико не постоји.
-Уколико је број у низу, вратити индекс на ком се налази тај број.
+Написати функцију коjа враћа вредности из одређене врсте и колоне такозваног Паскаловог троугла.
+Сваки броj унутар Паскаловог троугла представља збир два броjа коjи се налазе изнад њега, док
+су краjњи броjеви увек jединице. Сматрати да врсте и колоне Паскаловог троугла почињу од jедан, а не од нула.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def nadji_index(niz,broj):
+def paskalov_trougao(vrsta,kolona):
     """
-    Написати функцију која за сортиран низ јединствених елемената налази индекс на који би требало ставити број уколико не постоји.
-    Уколико је број у низу, вратити индекс на ком се налази тај број.
-    Пример:
-    niz = [1,3,5,6], broj = 5 -> 2
-    niz = [1,3,5,6], broj = 2 -> 1
-    niz = [1,3,5,6], broj = 7 -> 4
+    Написати функцију коjа враћа вредности из одређене врсте и колоне такозваног Паскаловог троугла.
+    Сваки броj унутар Паскаловог троугла представља збир два броjа коjи се налазе изнад њега, док
+    су краjњи броjеви увек jединице. Сматрати да врсте и колоне Паскаловог троугла почињу од jедан, а не од нула.
     """
-
-    for i in range(len(niz)):
-        if niz[i] >= broj:
-            return i
-    return len(niz)
-
+    if vrsta == kolona or kolona == 1:
+        return 1
+    
+    return paskalov_trougao(vrsta-1,kolona) + paskalov_trougao(vrsta-1,kolona-1)
 ```
 </details>
 
 ## Задатак 10
-Написати функцију која прима низ који садржи цифре броја, у подразумеваном редоследу.
-Инкрементовати број за један, и вратити низ цифара
+Написати рекурзивну функцију коjа врши изокретање ниске, односно ради исто што и ниска[::-1].
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def plus_jedan(niz):
+def izokretanje_niske(niska):
     """
-    Написати функцију која прима низ који садржи цифре броја, у подразумеваном редоследу.
-    Инкрементовати број за један, и вратити низ цифара
-    Пример:
-    [1,2,3] -> [1,2,4]
-    [4,3,2,1] -> [4,3,2,2]
-    [9] -> [1,0]
-    """ 
-    niz = list(map(str,niz))
-    broj = int(''.join(niz)) + 1
-    broj = str(broj)
-    output = [cifra for cifra in broj]
-    return output
+    Написати рекурзивну функцију коjа врши изокретање ниске, односно ради исто што и ниска[::-1].
+    """
+    if niska == '':
+        return niska
 
-    
+    return izokretanje_niske(niska[1:]) + niska[0]
 ```
 </details>
 
+## Задатак 11
+Написати функцију која проверава да ли је произвољна реч палиндром.\
+Тражи се рекурзивно решење.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def palindrom(niska):
+    """
+    Написати функцију која проверава да ли је произвољна реч палиндром.
+    Тражи се рекурзивно решење.
+    """
+    if len(niska) == 0 or len(niska) == 1:
+        return True
+    if niska[0] != niska[-1]:
+        return False
+    
+    return palindrom(niska[1:-1])
+```
+</details>
+
+## Задатак 12
+Написати функциjу коjа проверава да ли jе произвољна реченица палиндром.\
+Тражи се рекурзивно решење.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def palindrom(n):
+
+    def pretvaranje(n):
+        n = n.lower()
+        rezultat = ''
+        for s in n:
+            if s in 'абвгдђежзиjклљмнњопрстћуфхцчџш':
+                rezultat = rezultat + s
+        return rezultat
+
+    def pal(n):
+        if len(n) <= 1:
+            return True
+        else:
+            return n[0] == n[-1] and pal(n[1:-1])
+    
+    return(pal(pretvaranje(n)))
+        
+#print(palindrom('Ана воли Милована.'))
+#print(palindrom('Здраво свима.'))
+```
+</details>
+
+## Задатак 13
+Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
+се налази унутар петоугаоног облика у n-тоj итерациjи.
+<details markdown='block'>
+<summary>Рекурзивно решење </summary>
+
+```python
+def petougaoni_broj_rekurzivno(n):
+    """
+    Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
+се налази унутар петоугаоног облика у n-тоj итерациjи.
+    Тражи се рекурзивно решење.
+    """
+    if n ==1:
+        return 1
+    return 5*(n-1) + petougaoni_broj_rekurzivno(n-1)
+```
+</details>
+
+<details markdown='block'>
+<summary>Итеративно решење </summary>
+
+```python
+def petougaoni_broj_iterativno(n):
+    """
+    Написати процедуру коjа прима позитивну целоброjну вредност n, а враћа укупан броj кругова коjи
+се налази унутар петоугаоног облика у n-тоj итерациjи
+    Тражи се итеративно решење.
+    """
+    broj_kuglica = 1
+    for i in range(1,n):
+        broj_kuglica += 5*i
+
+    return broj_kuglica
+```
+</details>
+
+## Задатак 14
+Написати функцију која враћа број самогласникa у ниски.
+<details markdown='block'>
+<summary>Решење - итеративно</summary>
+
+```python
+def izbroj_samoglasnike_iterativno(niska):
+    """
+    Написати функцију која враћа број самогласникa у ниски.
+    Тражи се итеративно решење.
+    """
+    res = 0
+    for char in niska:
+        res += 1 if char in 'aeiou' else 0
+
+    return res
+```
+</details>
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def izbroj_samoglasnike_rekurzivno(niska):
+    """
+    Написати функцију која враћа број самогласникa у ниски.
+    Тражи се рекурзивно решење.
+    """
+    if niska == '':
+        return 0
+    res = 1 if niska[0] in 'aeiou' else 0
+    return res + izbroj_samoglasnike_rekurzivno(niska[1:]) 
+```
+</details>
+
+
+
+## Задатак 15
+Написати функцију која враћа број појављивања цифара у ниски.
+Тражи се рекурзивно решење.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def izbroj_cifre_rekurzivno(niska):
+    """
+    Написати функцију која враћа број појављивања цифара у ниски.
+    Тражи се рекурзивно решење.
+    """
+    if niska == '':
+        return 0
+
+    res = 1 if niska[0].isdigit() else 0
+    return res + izbroj_cifre_rekurzivno(niska[1:])
+```
+</details>
+
+## Задатак 16
+Написати функцију коjа прима две ниске произвољних дужина, а враћа ниску коjа садржи
+испреплетане чланове улазних ниски почевши од прве. За случаj да су дужине улазних ниски различите, 
+одговараjући чланови дуже ниске биће придружени на краjу резултуjуће ниске.
+<details markdown='block'>
+<summary>Решење - итеративно</summary>
+
+```python
+def isprepletaneIterativno(niska1, niska2):
+    """
+    Претпоставља да су улазне ниске (1 и 2) произвољних дужина и произвољног садржаjа.
+    Прави и враћа ниску сачињену преплитањем чланова улазних ниски почевши од прве.
+    """
+    i = 0
+    rezultat = ""
+    while i < len(niska1) and i < len(niska2):
+        rezultat += niska1[i] + niska2[i]
+        i += 1
+    rezultat += niska1[i:] + niska2[i:]
+    return rezultat
+```
+</details>
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def isprepletaneRekurzivno(niska1, niska2):
+    """
+    Претпоставља да су улазне ниске (1 и 2) произвољних дужина и произвољног садржаjа.
+    Прави и враћа ниску сачињену преплитањем чланова улазних ниски почевши од прве.
+    """
+    if niska1 == "": # или if len(niska1) == 0:
+        return niska2
+    if niska2 == "": # или if len(niska2) == 0:
+        return niska1
+    return niska1[0] + niska2[0] +  isprepletaneRekurzivno(niska1[1:], niska2[1:])
+```
+</details>
 
