Ажурирани задаци са седмих вежби.

--- a/вежбе/вежбе07.md
+++ b/вежбе/вежбе07.md
@@ -44,11 +44,114 @@ def broj_koji_fali(niz):
     """
     n = len(niz)
     return n*(n+1)//2 - sum(niz)
+
+#niz=list(map(int,input().split()))
+#print(broj_koji_fali(niz))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - други начин</summary>
+
+```python
+def funkc(niz, n):
+    niz.sort()
+    for i in range(len(niz) - 1):
+        tren, sled = niz[i], niz[i+1]
+        if(abs(sled - tren) > 1):
+            return tren + 1
+        
+    if niz[0] != 0:
+        return 0
+    else:
+        return None
     
+niz = list(map(int, input().split()))
+n = len(niz)
+rez = funkc(niz, n)
+print(rez)   
 ```
 </details>
 
 ## Задатак 3
+Написати функциjу коjа прима природан броj n и цифру c (коjа jе
+природан броj мањи од десет), а враћа броj поjављивања цифре c у
+природном броjу n.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def izbroj_cifru_iterativno(n,c):
+    return str(n).count(str(c))
+
+#n=int(input())
+#c=int(input())
+
+#print(izbroj_cifru_iterativno(n,c))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+def izbroj_Cifru(n, c):
+    """Функција прима природан броj n и цифру c коjа jе природан броj мањи од 
+    десет, а враћа броj поjављивања цифре c у природном броjу n."""
+    if n == c:
+        return 1
+    if n < 10:
+        return 0
+    if n%10 == c:
+        return 1 + izbroj_Cifru(n//10, c)
+    return izbroj_Cifru(n//10, c)
+
+#n=int(input())
+#c=int(input())
+
+#print(izbroj_Cifru(n,c))
+```
+</details>
+
+## Задатак 4
+Написати функциjу коjа за унети природан броj рачуна следећи
+поткорени израз (у примеру jе ’унети’ броj 5):\
+$\sqrt{1+\sqrt{2+\sqrt{3+\sqrt{4+\sqrt{5}}}}}=1,756238$
+<details markdown='block'>
+<summary>Решење - итеративно</summary>
+
+```python
+from math import sqrt
+
+def korenovi_2_iterativno(n):
+    sum=sqrt(n)
+    while n>1:
+        n-=1
+        sum=sqrt(n + sum)
+    return sum
+
+#n=int(input())
+#print("{:10.6f}".format(korenovi_2_iterativno(n)))
+```
+</details>
+
+<details markdown='block'>
+<summary>Решење - рекурзивно</summary>
+
+```python
+from math import sqrt
+
+def korenovi_2(n,i=1):
+    if n==i:
+        return sqrt(n)
+    return sqrt(i+korenovi_2(n,i+1))
+
+#n=int(input())
+#print("{:10.6f}".format(korenovi_2(n)))
+```
+</details>
+
+## Задатак 5
 Написати функцију која проверава да ли је редослед заграда ваљан.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -75,7 +178,7 @@ def zagrade(niska):
 ```
 </details>
 
-## Задатак 4
+## Задатак 6
 Написати функцију која враћа максималан члан у низу који се појављује непаран број пута.
 <details markdown='block'>
 <summary>Решење </summary>
@@ -97,10 +200,10 @@ def najveci_neparan_puta(niz):
 ```
 </details>
 
-## Задатак 5
+## Задатак 7
 Написати функцију која враћа име контакта који у свом броју има део броја који укуцамо.
 Уколико има више таквих контакта, вратити оног са најмањом алфабетском вредношћу.
-А уколико нема ни једног, врати "NO CONTACT".
+Уколико нема ни једног, вратити "NO CONTACT".
 <details markdown='block'>
 <summary>Решење </summary>
 
@@ -128,13 +231,13 @@ def kontakti(imena, brojevi, deo_broja):
 ```
 </details>
 
-## Задатак 6
-Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
+## Задатак 8
+Написати функцију која, за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
 <details markdown='block'>
 <summary>Решење </summary>
 
 ```python
-def nedeljivi_brojevi(leva_granica,desna_granica):
+def deljivi_brojevi(leva_granica,desna_granica):
     """
     Написати функцију која за унете границе, враћа низ бројева у оквиру тих граница који су дељиви са свим својим цифрама.
     Пример:
@@ -151,12 +254,11 @@ def nedeljivi_brojevi(leva_granica,desna_granica):
     for n in range(leva_granica, desna_granica + 1):
         if deljiv(n):
             res.append(n)
-    return res
-    
+    return res    
 ```
 </details>
 
-## Задатак 7
+## Задатак 9
 Написати функцију низ са парним бројем чланова групише у парове, тако да је збир минимуа тих парова максималан,
 и вратити тај максимум.
 <details markdown='block'>
@@ -188,7 +290,7 @@ def maksimum_minimuma(niz):
 ```
 </details>
 
-## Задатак 8
+## Задатак 10
 Написати функцију која прима низ цена бомбона, одредити колико новца би требало да потрошимо да купимо све из низа,
 ако на сваке две купљене бомбоне трећу добијамо гратис.
 Купац може изабрати коју год хоће гратис само ако цена треће није мања од миминалне цене претходне две купљене бомбоне.
@@ -219,7 +321,7 @@ def bombone(niz_cena):
 ```
 </details>
 
-## Задатак 9
+## Задатак 11
 Написати функцију која за сортиран низ јединствених елемената налази индекс на који би требало ставити број уколико не постоји.
 Уколико је број у низу, вратити индекс на ком се налази тај број.
 <details markdown='block'>
@@ -244,9 +346,9 @@ def nadji_index(niz,broj):
 ```
 </details>
 
-## Задатак 10
+## Задатак 12
 Написати функцију која прима низ који садржи цифре броја, у подразумеваном редоследу.
-Инкрементовати број за један, и вратити низ цифара
+Инкрементовати број за један, и вратити низ цифара.
 <details markdown='block'>
 <summary>Решење </summary>
 
@@ -267,5 +369,31 @@ def plus_jedan(niz):
     return output
 
     
+```
+</details>
+
+## Задатак 13
+Петља група - Збирка задатака: задатак [(M) Скраћивање ниске](https://arena.petlja.org/competition/zbirka#tab_133361)
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+x=input()
+def f(x):
+    if len(x)==0:
+        return ""
+    k=1
+    rez=x[0]
+    if len(x)==1:
+        return rez
+    for i in range (1,len(x)):
+        if x[i]==x[i-1]:
+            k+=1
+        else:
+            break
+    if k>1:
+        rez+=str(k)
+    return rez+f(x[k:])
+print(f(x))    
 ```
 </details>
