Ажурирани задаци са осмих вежби.

--- a/вежбе/вежбе08.md
+++ b/вежбе/вежбе08.md
@@ -1,6 +1,132 @@
 # Основи програмирања: вежбе - VIII недеља
 
 ## Задатак 1
+Написати функцију која враћа најучесталији карактер ниске.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def najcesci_karakter_niske(niska):
+    """
+    Написати функцију која враћа најучесталији карактер ниске.
+    """
+    recnik = {}
+
+    for karakter in niska:
+        if karakter in recnik:
+            recnik[karakter] +=1
+        else:
+            recnik[karakter] = 1
+
+        #ovaj if else iskaz menja samo
+        #recnik[karakter] = recnik.get(karakter,0) + 1
+
+    return max(recnik, key = recnik.get)  
+
+
+niska=input()
+print(najcesci_karakter_niske(niska))
+```
+</details>
+
+## Задатак 2
+Написати функцију коjа враћа сортиран низ свих кључева улазног речника коjи 
+имаjу задату циљану вредност, а уколико пак таквих кључева у речнику нема, 
+функција ће вратити празан низ.
+
+Додатно објашњење: Функција прима речник чиjи су кључеви цели броjеви, 
+а вредности су му произвољне, док враћа сортиран низ кључева унетог речника 
+коjи су повезани на задату вредност.
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def ciljaneVrednosti(recnik, vrednost):
+    nizKljuceva = []
+    for kljuc in recnik:
+        if recnik[kljuc] == vrednost:
+            nizKljuceva.append(kljuc)
+    
+    return sorted(nizKljuceva)
+
+print(ciljaneVrednosti({46:23,23:32,4:82,7:23,6:23,5:23},23))
+```
+</details>
+
+## Задатак 3
+Написати функцију коjа врши инверзиjу речника са непроменљивим вредностима. Инверзни речник
+почетног речника jесте нов речник чиjи су кључеви заправо вредности изворног речника. Вредности
+инверзног речника су сортирани низови свих кључева почетног речника повезаних на задату вредност.
+
+Пример:
+
+{1:10, 2:20, 3:30} -> {10: [1], 20: [2], 30: [3]}
+
+{1:10, 2:20, 3:30, 4:30} -> {10: [1], 20: [2], 30: [3, 4]}
+
+{4:True, 0:True, 2:True} -> True: [0, 2, 4]
+<details markdown='block'>
+<summary>Решење </summary>
+
+```python
+def inverzni_recnik(recnik):
+    """
+    Написати функцију коjа врши инверзиjу речника са непроменљивим вредностима. Инверзни речник
+    почетног речника jесте нов речник чиjи су кључеви заправо вредности изворног речника. Вредности
+    инверзног речника су сортирани низови свих кључева почетног речника повезаних на задату вредност.
+    Пример:
+    {1:10, 2:20, 3:30} -> {10: [1], 20: [2], 30: [3]}
+    {1:10, 2:20, 3:30, 4:30} -> {10: [1], 20: [2], 30: [3, 4]}
+    {4:True, 0:True, 2:True} -> True: [0, 2, 4]
+    """
+    inverzni = {}
+    for kljuc, vrednost in recnik.items():
+        if vrednost in inverzni:
+            inverzni[vrednost].append(kljuc)
+        else:
+            inverzni[vrednost] = [kljuc]
+        inverzni[vrednost].sort()
+    return inverzni
+
+recnik1={1:10, 2:20, 3:30}
+recnik2={1:10, 2:20, 3:30, 4:30}
+recnik3={4:True, 0:True, 2:True}
+
+print(inverzni_recnik(recnik1))
+print(inverzni_recnik(recnik2))
+print(inverzni_recnik(recnik3))
+```
+</details>
+
+## Задатак 4
+Дат је низ бројева. Желимо да наш низ постане монотоно растући низ.
+То можемо да средимо само инкрементовањем чланова низа.
+Написати функцију која враћа минималан број инкрементовања.
+<details markdown='block'>
+<summary>Решење</summary>
+
+```python
+def minOperacija(niz):
+    """
+    Дат је низ бројева. Желимо да наш низ постане монотоно растући низ.
+    То можемо да средимо само инкрементовањем чланова низа.
+    Написати функцију која враћа минималан број инкрементовања.
+    Пример:
+    [1,1,1]     -> 3, јер желимо да добијемо [1,2,3]
+    [1,5,2,4,1] -> 14, јер желимо да добијемо [1,5,6,7,8]
+    """
+    brojac = 0
+    for i in range(1,len(niz)):
+        if niz[i]<=niz[i-1]:
+            razlika = niz[i-1]-niz[i]+1 #колико треба да инкрементујемо да би постао већи за 1
+            brojac += razlika
+            niz[i] = niz[i-1]+1 #сада је већи за 1
+    return brojac
+    
+```
+</details>
+
+## Задатак 5
 Размотримо следећу секвенцу бројева:
 0, 1, 1, 2, 3, 5, 8, 13, 12, 7, 10, 8, 9...
 Нулти елемент је једнак 0, а први елемент једнак 1.
@@ -37,7 +163,7 @@ def sekvenca_brojeva(n):
 ```
 </details>
 
-## Задатак 2
+## Задатак 6
 Написати функцију која ће вратити максималан број карактера 'a' који се могу додати у улазну ниску 
 тако да резултујућа ниска нема 3 узастопна таква карактера.
 Уколико улазна ниска већ има 3 узастопна карактара 'a' вратити -1.
@@ -73,61 +199,8 @@ def koliko_karaktera_a(niska):
 ```
 </details>
 
-## Задатак 3
-Написати итеративну функциу коjа прима две ниске произвољних дужина, а враћа ниску коjа 
-садржи испреплетане чланове улазних ниски почевши од прве. За случаj да су дужине улазних
-ниски различите, одговараjући чланови дуже ниске биће придружени на краjу резултуjуће ниске.
-<details markdown='block'>
-<summary>Решење </summary>
 
-```python
-def isprepletane_iterativno(niska1,niska2):
-    """
-    Написати итеративну функциу коjа прима две ниске произвољних дужина, а враћа ниску коjа 
-    садржи испреплетане чланове улазних ниски почевши од прве. За случаj да су дужине улазних
-    ниски различите, одговараjући чланови дуже ниске биће придружени на краjу резултуjуће ниске.
-    Пример:
-    niska1 = 'Osnove'
-    niska2 = 'programiranja -> 'Opsrnoogvraemiranja'
-    """
-    i = 0
-    rezultat = ''
-    while i < len(niska1) and i < len(niska2):
-        rezultat += niska1[i] + niska2[i]
-        i += 1
-    rezultat += niska1[i:] + niska2[i:]
-    return rezultat
-```
-</details>
-
-## Задатак 4
-Написати рекурзивну функцију коjа прима две ниске произвољних дужина, а враћа ниску коjа 
-садржи испреплетане чланове улазних ниски почевши од друге. За случаj да су дужине улазних
-ниски различите, одговараjући чланови дуже ниске биће придружени на краjу резултуjуће ниске.
-<details markdown='block'>
-<summary>Решење </summary>
-
-```python
-def isprepletane_rekurzivno(niska1,niska2):
-    """
-    Написати рекурзивну функцију коjа прима две ниске произвољних дужина, а враћа ниску коjа 
-    садржи испреплетане чланове улазних ниски почевши од друге. За случаj да су дужине улазних
-    ниски различите, одговараjући чланови дуже ниске биће придружени на краjу резултуjуће ниске.
-    Пример:
-    niska1 = 'Osnove'
-    niska2 = 'programiranja -> 'pOrsongorvanmeiranja'
-    """
-    if niska1 == '': 
-        return niska2
-    if niska2 == '': 
-        return niska1
-    return niska2[0] + niska1[0] + isprepletane_rekurzivno(niska1[1:], niska2[1:])
-
-    
-```
-</details>
-
-## Задатак 5
+## Задатак 7
 Броj 6174 коjи jе такође познат и као такозвана Капрекарова константа поседуjе jедно занимљиво
 своjство. Наиме, полазећи од произвољног четвороцифреног броjа код кога нису све цифре међусобно
 jеднаке (дакле изузимаjући ту 1111, 2222, 3333, 4444, 5555, 6666, 7777, 8888 и 9999), или чак и од
@@ -167,7 +240,7 @@ def kaprekarova_konstanta(broj):
 ```
 </details>
 
-## Задатак 6
+## Задатак 8
 Дат је низ цене где је цене[i] цена акције i-тог дана.
 Желимо да максимизујемо наш профит тако што ћемо изабрати ког дана ћемо купити акцију и ког дана ћемо је продати. 
 Уколико не можемо да профитирамо, нећемо купити ниједну акцију, па ће наш профит бити 0.
@@ -200,31 +273,5 @@ def maxProfit(cene):
 ```
 </details>
 
-## Задатак 7
-Дат је низ бројева. Желимо да наш низ постане монотоно растући низ.
-То можемо да средимо само инкрементовањем чланова низа.
-Написати функцију која враћа минималан број инкрементовања.
-<details markdown='block'>
-<summary>Решење </summary>
 
-```python
-def minOperacija(niz):
-    """
-    Дат је низ бројева. Желимо да наш низ постане монотоно растући низ.
-    То можемо да средимо само инкрементовањем чланова низа.
-    Написати функцију која враћа минималан број инкрементовања.
-    Пример:
-    [1,1,1]     -> 3, јер желимо да добијемо [1,2,3]
-    [1,5,2,4,1] -> 14, јер желимо да добијемо [1,5,6,7,8]
-    """
-    brojac = 0
-    for i in range(1,len(niz)):
-        if niz[i]<=niz[i-1]:
-            razlika = niz[i-1]-niz[i]+1 #колико треба да инкрементујемо да би постао већи за 1
-            brojac += razlika
-            niz[i] = niz[i-1]+1 #сада је већи за 1
-    return brojac
-    
-```
-</details>
 
